--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.4.0",
+    "lodash": "^4.17.21",
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-native": "0.78.0",
+    "react-native-dialog": "^9.3.0",
+    "react-native-share": "^12.0.9",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
