🚀 Complete Locate App - High-Accuracy GPS Location Tracker
✨ Features:
- High-accuracy GPS location tracking with smart provider strategy
- Save, check, and manage location points with custom names
- Calculate precise distances between locations
- Share location lists with Google Maps integration
- Clean SQLite database for local storage
- Vietnamese UI with professional design

🏗️ Architecture:
- Native Kotlin module for GPS optimization (Android)
- React Native with modern hooks for UI/logic
- Clean separation: Native handles coordinates, JS handles business logic
- Optimized for accuracy and performance

📱 Tech Stack:
- React Native 0.78.0
- Kotlin native module with LocationManager
- SQLite custom wrapper
- Vector icons, dialogs, sharing capabilities

🎯 Optimizations:
- Removed redundant files and dependencies
- GPS priority with Network fallback strategy
- Smart timeout and accuracy thresholds
- Comprehensive documentation and MIT license

Ready for production use! 📍

--- a/app.json
+++ b/app.json
@@ -1,4 +1,5 @@
 {
   "name": "Locate",
-  "displayName": "Locate"
+  "displayName": "Locate",
+  "bundleIdentifier": "org.reactjs.native.example.Locate"
 }
