--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Locate",
   "version": "0.0.1",
   "private": true,
+  "bundleIdentifier": "com.locate",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -10,7 +11,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/geolocation": "^3.4.0",
     "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-native": "0.78.0",
